WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167543
REGRESSION(
r196383
): Automatic shrink-to-fit of RuleSet no longer works.
https://bugs.webkit.org/show_bug.cgi?id=167543
Summary
REGRESSION(r196383): Automatic shrink-to-fit of RuleSet no longer works.
Andreas Kling
Reported
2017-01-27 23:12:50 PST
An accident in
https://trac.webkit.org/changeset/196383
made it impossible to enable RuleSet's automagic shrink-to-fit mechanism. We should fix this so that non-author style RuleSets get shrink-wrapped after adding a sheet. This will reduce memory consumption of extension stylesheets somewhat.
Attachments
Patch
(1.25 KB, patch)
2017-01-27 23:29 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-01-27 23:29:52 PST
Created
attachment 300003
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-28 04:17:43 PST
Comment on
attachment 300003
[details]
Patch Clearing flags on attachment: 300003 Committed
r211335
: <
http://trac.webkit.org/changeset/211335
>
WebKit Commit Bot
Comment 3
2017-01-28 04:17:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug