REGRESSION(r196383): Automatic shrink-to-fit of RuleSet no longer works. <https://webkit.org/b/167543>

Reviewed by Antti Koivisto.

Re-enable the automatic shrink-to-fit optimization in RuleSet.
This was disabled accidentally, which I discovered while investigating
the memory footprint of extension stylesheets.

* css/RuleSet.h:


Canonical link: https://commits.webkit.org/184579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211335 268f45cc-cd09-0410-ab3c-d52691b4dbfc